@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2023 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2023 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2024 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2024 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-runtime-lib
  * Created on: 21 авг. 2019 г.
@@ -111,8 +111,7 @@ namespace lsp
                 void                take(OutMemoryStream &src);
                 void                take(OutMemoryStream *src);
 
-            public:
-
+            public: // io::IInStream
                 virtual wssize_t    avail() override;
                 virtual wssize_t    position() override;
                 virtual ssize_t     read(void *dst, size_t count) override;
